Fixed issue with a nav covering the entire page and links not working

--- a/WebApplication1/WebApplication1/stylesheets/css.css
+++ b/WebApplication1/WebApplication1/stylesheets/css.css
@@ -1,14 +1,5 @@
 ﻿/* TODO 
-    Finish implementing CSS Box model properties in the header, main body content, and footer on all HTML pages.
-Use CSS Box Model properties to style the card layout for the class subject images and descriptions
 Add a border around the card layout when the user hovers over it.
-Create a two-column layout on the Team.html page.
-Make sure to create a new branch for each portion of work, merge than branch with master, and push the updated version of the master branch to the remote repo.
-    Finish implementing CSS Box model properties in the header, main body content, and footer on all HTML pages.
-Use CSS Box Model properties to style the card layout for the class subject images and descriptions
-Add a border around the card layout when the user hovers over it.
-Create a two-column layout on the Team.html page.
-Make sure to create a new branch for each portion of work, merge than branch with master, and push the updated version of the master branch to the remote repo.
     Create a new branch off master.
 Make each class subject card a named anchor link that scrolls down to a table that lists the classes offered about that subject
 Tables should have a <thead>, <tbody>, and <tfoot>
@@ -60,7 +51,7 @@ header h2 {
 
 nav {
     width: 100%;
-    position: fixed;
+    position: center;
     top: 50px;
     text-align: center;
 }
@@ -163,11 +154,11 @@ nav a {
     }
 
     thead {
-        background-color: #96f3fa;
+        background-color: deepskyblue;
     }
 
     tfoot {
-        background-color: teal;
+        background-color: hotpink;
     }
 
         tfoot tr, tfoot td {
@@ -187,3 +178,24 @@ nav a {
         margin: auto;
         margin-bottom: 2em;
     }
+
+    main.team section{
+        background-color: black;
+        padding: 2em;
+        margin: 1em;
+    }
+
+main.team section img{
+    float: left;
+    
+}
+
+div.clear {
+    clear: both;
+}
+
+main.team section p{
+    border: 2px solid white;
+
+}
+
